--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
-          - x86_64-pc-windows-msvc
+          - x86_64-pc-windows-gnu
           - x86_64-apple-darwin
         include:
           - os: ubuntu-latest
