--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,15 @@ jobs:
           - x86_64-apple-darwin
         include:
           - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
             archive: .zip
             extension: ""
           - os: windows-latest
+            target: x86_64-pc-windows-msvc
             archive: .zip
             extension: .exe
           - os: macos-latest
+            target: x86_64-apple-darwin
             archive: .zip
             extension: ""
         toolchain: [stable]
