--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,33 +43,33 @@ lindera-tokenizer = { version = "0.27.2", path = "lindera-tokenizer" }
 lindera-unidic = { version = "0.27.2", path = "lindera-unidic" }
 lindera-unidic-builder = { version = "0.27.2", path = "lindera-unidic-builder" }
 
-anyhow = "1.0.71"
+anyhow = "1.0.80"
 bincode = "1.3.3"
-byteorder = "1.4.3"
-clap = { version = "4.3.11", features = ["derive", "cargo"] }
+byteorder = "1.5.0"
+clap = { version = "4.5.1", features = ["derive", "cargo"] }
 criterion = { version = "0.5.1", features = ["html_reports"] }
-csv = "1.2.2"
+csv = "1.3.0"
 encoding = "0.2.33"
-encoding_rs = "0.8.32"
+encoding_rs = "0.8.33"
 encoding_rs_io = "0.1.7"
-env_logger = "0.11.0"
-flate2 = "1.0.26"
+env_logger = "0.11.2"
+flate2 = "1.0.28"
 glob = "0.3.1"
 kanaria = "0.2.0"
-log = "0.4.19"
-once_cell = "1.18.0"
+log = "0.4.20"
+once_cell = "1.19.0"
 rand = "0.8.5"
-regex = "1.9.0"
-serde = {version="1.0.167", features = ["derive"] }
-serde_json = "1.0.100"
-tar = { version = "0.4.38" }
-thiserror = "1.0.43"
-unicode-blocks = "0.1.8"
-unicode-normalization = "0.1.22"
-unicode-segmentation = "1.10.1"
-ureq = { version = "2.7.1", default-features = false, features = ["tls"] }
+regex = "1.10.3"
+serde = {version="1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+tar = "0.4.40"
+thiserror = "1.0.57"
+unicode-blocks = "0.1.9"
+unicode-normalization = "0.1.23"
+unicode-segmentation = "1.11.0"
+ureq = { version = "2.9.6", default-features = false, features = ["tls"] }
 yada = "0.5.0"
-zip = { version = "0.6.6" }
+zip = "0.6.6"
 
 
 [profile.release]
