--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-cc-cedict = ["encoding", "zip"]
+cc-cedict = ["encoding", "flate2", "tar", "ureq"]
 compress = ["lindera-cc-cedict-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -25,7 +25,9 @@ lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
 encoding = { workspace = true, optional = true }
-zip = { workspace = true, optional = true }
+flate2 = { workspace = true, optional = true }
+tar = { workspace =true, optional = true }
+ureq = { workspace = true, optional = true }
 
 lindera-core.workspace = true
 lindera-cc-cedict-builder.workspace = true
