--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-ko-dic = ["encoding", "flate2", "tar"]
+ko-dic = ["encoding", "flate2", "tar", "ureq"]
 compress = ["lindera-ko-dic-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -26,7 +26,8 @@ lindera-decompress = { workspace = true, optional = true }
 [build-dependencies]
 encoding = { workspace = true, optional = true }
 flate2 = { workspace = true, optional = true }
-tar = { workspace = true, optional = true }
+tar = { workspace =true, optional = true }
+ureq = { workspace = true, optional = true }
 
 lindera-core.workspace = true
 lindera-ko-dic-builder.workspace = true
