--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-unidic = ["encoding", "zip", "ureq"]
+unidic = ["encoding", "flate2", "tar", "ureq"]
 compress = ["lindera-unidic-builder/compress", "lindera-decompress"]
 
 [dependencies]
@@ -25,7 +25,8 @@ lindera-decompress = { workspace = true, optional = true }
 
 [build-dependencies]
 encoding = { workspace = true, optional = true }
-zip = { workspace = true, optional = true }
+flate2 = { workspace = true, optional = true }
+tar = { workspace =true, optional = true }
 ureq = { workspace = true, optional = true }
 
 lindera-core.workspace = true
