--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -14,20 +14,12 @@ license = "MIT"
 [features]
 default = []  # No directories included
 ipadic = ["lindera-tokenizer/ipadic"]  # Include IPADIC dictionary (Japanese)
-ipadic-compress = ["lindera-tokenizer/ipadic-compress"]  # Compress IPADIC
-ipadic-filter = ["lindera-analyzer/ipadic-filter"]  # Include filters for IPADIC
 ipadic-neologd = ["lindera-tokenizer/ipadic-neologd"]  # Include IPADIC NEologd dictionary (Japanese)
-ipadic-neologd-compress = ["lindera-tokenizer/ipadic-neologd-compress"]  # Compress IPADIC NEologd
-ipadic-neologd-filter = ["lindera-analyzer/ipadic-neologd-filter"]  # Include filters for IPADIC NEologd
 unidic = ["lindera-tokenizer/unidic"]  # Include UniDic dictionary (Japanese)
-unidic-compress = ["lindera-tokenizer/unidic-compress"]  # Compress UniDic
-unidic-filter = ["lindera-analyzer/unidic-filter"]  # Include filters for UniDic
 ko-dic = ["lindera-tokenizer/ko-dic"]  # Include ko-dic dictionary (Korean)
-ko-dic-compress = ["lindera-tokenizer/ko-dic-compress"]  # Compress ko-dic
-ko-dic-filter = ["lindera-analyzer/ko-dic-filter"]  # Include filters for ko-dic
 cc-cedict = ["lindera-tokenizer/cc-cedict"]  # Include CC-CEDICT dictionary (Chinese)
-cc-cedict-compress = ["lindera-tokenizer/cc-cedict-compress"]  # Compress CC-CEDICT
-cc-cedict-filter = ["lindera-analyzer/cc-cedict-filter"]  # Include filters for CC-CEDICT
+compress = ["lindera-tokenizer/compress"]  # Compress dictionaries
+filter = ["lindera-analyzer/filter"]  # Include filters
 
 [dependencies]
 anyhow.workspace = true
